--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,52 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__image-container">
+        <img
+          class="header__image"
+          src="/images/header-background.png"
+          alt="university"
+        >
+        <h2 class="header__promo-content-decorator">ній</h2>
+      </div>
+      <div class="header__menu-section">
+        <div class="header__menu-btn">
+          <input
+            class="header__menu-input"
+            type="checkbox"
+            id="menu"
+          >
+          <label class="header__burger-slice" for="menu"></label>
+        </div>
+        <nav class="header__nav">
+          <ul class="header__ul">
+            <li class="header__li-item"><a href="#" class="header__link">галерея</a></li>
+            <li class="header__li-item"><a href="#" class="header__link">вистави та події</a></li>
+            <li class="header__li-item"><a href="#" class="header__link">стати нашим другом</a></li>
+            <li class="header__li-item"><a href="#" class="header__link">про нас</a></li>
+            <li class="header__li-item"><a href="#" class="header__link">магазин</a></li>
+            <li class="header__li-item"><a href="#" class="header__link">блог</a></li>
+            <li class="header__li-item"><a href="#" class="header__link">контакти</a></li>
+          </ul>
+        </nav>
+        <h1 class="header__logo-name">na<br>mu</h1>
+        <div></div>
+      </div>
+      <div class="header__promo-content">
+        <div class="header__promo">
+          <h2 class="header__title">
+            худож<span class="header__decorate-title">ній</span><br>музей
+          </h2>
+          <div class="header__buy-ticket-btn">
+            <button class="header__ticket">квитки</button>
+            <div class="header__ticket-arrow"></div>
+          </div>
+        </div>
+      </div>
+      <div class="header__events">події</div>
+
+    </header>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
