--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
   <body>
     <header class="header">
       <div class="container">
+        <input
+          class="header__menu-input"
+          type="checkbox"
+          id="menu"
+        >
         <div class="header__image-container">
           <img
             class="header__image"
@@ -17,11 +22,6 @@
           >
           <h2 class="header__promo-content-decorator">ній</h2>
         </div>
-        <input
-          class="header__menu-input"
-          type="checkbox"
-          id="menu"
-        >
         <div class="header__menu-section">
           <label class="header__burger-toogler" for="menu">
             <span class="header__burger-slice"></span>
@@ -53,6 +53,7 @@
             </ul>
           </nav>
           <h1 class="header__logo-name">na<br>mu</h1>
+          <div></div>
         </div>
         <div class="header__promo-content">
           <div class="header__promo">
